# distributed-math-cluster

./: .gitignore  CMakeLists.txt  GestorCalculo.cpp  GestorCalculo.h  Math.cpp  Math.h  MathRemota.cpp  README.md  broker.cpp  main_math.cpp  run_test.sh  server.cpp  structures.h  utils.cpp  utils.h
